docs: clarify API contracts and streamline README